--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.username=root
 spring.datasource.password=Pandeyvivek007
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
