--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,19 @@
-spring.application.name=job-app
+#spring.application.name=job-app
+
+
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DB_NAME:jobdb}
+#spring.datasource.username=${MYSQL_USER:root}
+#spring.datasource.password=${MYSQL_PASSWORD:root}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
+spring.datasource.url=jdbc:mysql://mysql-docker:3306/jobdb_docker?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/user
-spring.datasource.username=root
-spring.datasource.password=Pandeyvivek007
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+spring.jpa.show-sql=true
 
 
-management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
+
